@@ -1,5 +1,7 @@
 /*
  */
+ 
+@namespace "http://www.w3.org/2000/svg";
 
 svg, symbol, marker, pattern, foreignObject
 {
